Changelog
=========
1.4-dev (unreleased)
--------------------
* BUG FIX: changed call to getmap service to use another service projection for Europe 'Mercato (WM)', fixes #3634 [demarant]
* Renamed "country introduction" to "country profile" #3875 [vincisas]
* Diversity questions changed #3873 [vincisas]
* BUG FIX: removed double country name for country introduction view #3881 [vincisas]

1.3 - (2010-11-19)
------------------
* a geo coverage vocabulary with only the used values to have faster faceted and shorter list [vincisas]
* avoid multiple portlets in multi report views [vincisas]

1.2 - (2010-11-18)
------------------
* Change: Added cache metadata to images [ghicaale #3667]
* BUG FIX: flexibility questions are now saved on imported, were ignored before #3857 [vincisas]
* Change: Preserve markup in country introduction snippet and cut at end of paragraph after char 1000, #3863 [vincisas]

1.1 - (2010-11-10)
------------------
* Re-release egg since previous version 1.0 was incomplete/broken.[demarant]

1.0 (2010-11-10)
----------------
* BUG FIX: moved config variables from tests/base.py to config.py in order not
  to @setup test env outside testing context [voineali]
* BUG FIX #3809: removed forced floating left on any image tag in assessment. [demarant]

* Added feeds for SENSE countries. [vincisas]
* Added SOER portal type vocabulary to be used in faceted [vincisas]
* Change number of sentences shown for country introduction in soercountry_view [vincisas]
* Added migrationstep for recreating scales after PIL 1.1.7 upgrade #3819 [vincisas]
* Show larger figure in popup and link to fullscreen #3805 [vincisas]

0.9 - (2010-11-05)
------------------

* CHANGE: on country view we convert country introduction to text and show only the first 50 sentences.
this will make the text more plain but the right formating will be shown when user press read more.
fixes #3774
* BUG FIX: unicode error with custom question in Flexibility report, fixes #3817